<resources>
    <string name="app_name">Boundo</string>
    <string name="appDesc">A bundle of tools bound to do some things for you</string>
    <string name="ttExportCal">To calendar</string>
    <string name="Main_ToolBar_title_Settings">Settings</string>
    <string name="Settings_Button_SwitchLanguage">Languages</string>
    <string name="Settings_Button_CheckUpdate">App update</string>
    <string name="Settings_LanguagePicker_Auto">Follow system</string>
    <string name="Settings_Language_Button_Cancel">Cancel</string>
    <string name="Settings_Language_Dialog_Title">Languages</string>
    <string name="Settings_Button_Derive">Derive plain text</string>
    <string name="ttExportICalFile">iCalendar file</string>
    <string name="Launcher_WeChat">WeChat</string>
    <string name="Shortcuts_WeChatScanner_ShortLabel">Scan</string>
    <string name="Shortcuts_WeChatScanner_LongLabel">Scan</string>
    <string name="Shortcuts_WeChatScanner_DisabledMessage">Disabled</string>
    <string name="WeChatLauncher_Launch_Fail">WeChat not installed</string>
    <string name="SettingsSync_Update_AlertDialog_Title_UpdateInfo">New version found</string>
    <string name="SettingsSync_Update_AlertDialog_MessagePart1">New version</string>
    <string name="SettingsSync_Update_AlertDialog_MessagePart2">Changes</string>
    <string name="SettingsSync_Update_AlertDialog_PositiveButtonText">Update</string>
    <string name="SettingsSync_Update_AlertDialog_NeutralButtonText">Don\'t bother</string>
    <string name="SettingsSync_Update_AlertDialog_NegativeButtonText">Not now</string>
    <string name="SettingsSync_UpdateFalse_AlertDialog_Title">No update</string>
    <string name="text_alright">OK</string>
    <string name="text_allset">Finish</string>
    <string name="text_forgetit">Cancel</string>
    <string name="Main_TextView_Launcher">Instant</string>
    <string name="Main_TextView_Advice_Text">About</string>
    <string name="textQQ">QQ</string>
    <string name="textEmail">Email</string>
    <string name="Advice_QQ_Toast_Text">Add as contact before starting a conversation, otherwise the message will not be sent to me</string>
    <string name="Advice_Switch_Debug_Text">Consuming mode</string>
    <string name="Settings_ImageView_Update">App update</string>
    <string name="Settings_ImageView_Language">Languages</string>
    <string name="Launcher_QQContacts_Toast_Avatar_PermissionDenied">Please grant the permission so we can read the image</string>
    <string name="text_add_new">Add new</string>
    <string name="developertools_appinfowidget">CoolApk App Info</string>
    <string name="developertools_cropimage">Image Modifying</string>
    <string name="toast_permission_storage_denied">Please grant the permission so we can read/write data</string>
    <string name="apiViewer">App API</string>
    <string name="settingsfunction_downloaddescription">Downloading an update</string>
    <string name="text_OK">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Finish</string>
    <string name="advice_textview_derive_details">Substitute the rich text from website in clipboard by corresponding plain text</string>
    <string name="text_no_content">No content</string>
    <string name="settings_exterior">Style</string>
    <string name="text_reset">Reset</string>
    <string name="exterior_dark_staus">Dark status bar icon</string>
    <string name="exterior_dark_navigation">Dark navigation bar icon</string>
    <string name="text_remove">Remove</string>
    <string name="sdk_dialog_details">Details</string>
    <string name="app_info_name">App package name</string>
    <string name="text_parse_fails">Error parsing data</string>
    <string name="text_app_not_installed">Corresponding application not installed</string>
    <string name="text_mon">Mon.</string>
    <string name="text_tue">Tue.</string>
    <string name="text_wed">Wed.</string>
    <string name="text_thu">Thu.</string>
    <string name="text_fri">Fri.</string>
    <string name="text_sat">Sat.</string>
    <string name="text_sun">Sun.</string>
    <string name="text_error">An error occurred</string>
    <string name="exterior_blur_degree">Blur degree</string>
    <string name="text_loading">Loading</string>
    <string name="sdk_search_hint"><font size="12">name, package, API level, Android version</font></string>
    <string name="instant_manager_intro">App Shortcuts</string>
    <string name="text_new">New</string>
    <string name="settings_sdk">Display round app icons</string>
    <string name="tools_nm">Private Pics Hiding</string>
    <string name="nm_adapter_img_content_1">Image folder image</string>
    <string name="settings_fun_update_via_browser">Download via browser\n(touch &#38; hold to copy the link)</string>
    <string name="text_copy_link">Link copied</string>
    <string name="text_feature_feathering">Feature feathering, time devoting</string>
    <string name="advice_license">Open source licenses</string>
    <string name="advice_license_details">License details for open software that helps Boundo come to shape</string>
    <string name="text_copy">Copy</string>
    <string name="text_copy_content">Content copied</string>
    <string name="text_apply_background">Apply as background</string>
    <string name="apiInfoAiSubBack">Background</string>
    <string name="apiInfoAiSubFore">Foreground</string>
    <string name="apiInfoSubAiDes">Adaptive Icon adapts to any shape instead of being limited to a predefined one</string>
    <string name="text_yes">Yes</string>
    <string name="apiDisplayAPK">Device APKs</string>
    <string name="apiDisplaySys">System apps</string>
    <string name="settingsApiApkPreload">Scan for APKs in advance in background</string>
    <string name="immortalMessage">Oh no!\nWe are irritated by a bug.\nDon\'t worry, it\'s caught in our bag!\nDeliver the log to us to do research on!</string>
    <string name="immortalBag">Log</string>
    <string name="immortalRestart">Get back</string>
    <string name="immortalMessageMortal">Log file generated</string>
    <string name="immortalShareTitle">Share log file</string>
    <string name="immortalSendTitle">Email log file to developer</string>
    <string name="immortalEmailSubject">Issue Report</string>
    <string name="immortalContact">Contact us</string>
    <string name="immortalLocate">Locate</string>
    <string name="immortalShare">Share</string>
    <string name="immortalSend">Deliver</string>
    <string name="textBugLog">Bug caught in log</string>
    <string name="tileColorful">Stay Colorful</string>
    <string name="apiViewerShort">App API</string>
    <string name="instantMmLogoDesc">WeChat logo</string>
    <string name="menuApiSortApiTime">Recently updated</string>
    <string name="avStoreLink">Link to app store</string>
    <string name="apiSdkTarget">Target SDK</string>
    <string name="apiSdkMin">Minimum SDK</string>
    <string name="settingsApiRetrieveRoundIcon">Retrieve round icon from resource when provided</string>
    <string name="activityTextProcessingApp">View Bnd apps</string>
    <string name="res_invalid_input">Invalid input</string>
    <string name="text_sort">Sort</string>
    <string name="text_refresh">Refresh</string>
    <string name="ttTimeTextClassDuration">Class duration</string>
    <string name="textShareApk">Share the APK of this app with others</string>
    <string name="textShareImage">Share the logo of this app with others</string>
    <string name="tileBarCodeScanner">Scan barcode</string>
    <string name="textParentheses">" (%s)"</string>
    <string name="textColon">": "</string>
    <string name="textAsk4Notification">Please grant us the permission to show notifications, we depend on Toast Notifications to provide you the best experience. It is used to notify you instructions, tips, suggestions, successful operation messages and sometimes error messages. You might encounter confusion in our app if you choose not to grant us the notification permission.</string>
    <string name="textGrantPermission">Grant permission</string>
    <string name="apiDisplayFile">Select APKs</string>
    <string name="textRound">Round</string>
    <string name="textRounded">Rounded rectangle</string>
    <string name="textSquircle">Squircle</string>
    <string name="textSelectFromGallery">Select image from gallery manually</string>
    <string name="textWeekNum">Week %d</string>
    <string name="ttWeekIndicator">Week Indicator</string>
    <string name="ttWeekIndicatorHint">Enter end week</string>
    <string name="ttWeekIndicatorUndo">Undo imports in Google Calendar</string>
    <string name="textQuality">Quality</string>
    <string name="tileDataUsageAccess">Allow us to access usage</string>
    <string name="tileData">Month data usage</string>
    <string name="apiDisplayVolume">Select file folder</string>
    <string name="activityApkSharing">Check API</string>
    <string name="sharingNonApkLink">Not apk download link</string>
    <string name="textCapturingScreen">Capturing screen</string>
    <string name="prefSettingsThemeDefault">Plain white</string>
    <string name="prefSettingsThemeBlack">Pitch-black</string>
    <string name="prefSettingsThemeBlackGray">Material Design dark</string>
    <string name="prefSettingsThemeAuto">Follow system</string>
    <string name="prefSettingsTheme">Theme</string>
    <string name="apiDragDropHint">Search or APK</string>
    <string name="updateDownload">Download</string>
    <string name="instantTileScannerAlipay">Alipay barcode scanner</string>
    <string name="instantTileScannerWechat">WeChat barcode scanner</string>
    <string name="instantTileIntro">Quick Settings Tiles</string>
    <string name="textAlways">Always</string>
    <string name="textNever">Never</string>
    <string name="prefExteriorDarkPlanSchedule">Custom time</string>
    <string name="prefExteriorThemes">Themes</string>
    <string name="prefExteriorLightTheme">Bright theme</string>
    <string name="prefExteriorDarkTheme">Dark theme</string>
    <string name="prefExteriorApplyDark">Apply dark theme</string>
    <string name="prefExteriorDarkPlan">Schedule</string>
    <string name="prefExteriorDarkByBatterySaver">By Battery Saver</string>
    <string name="prefExteriorBackgrounds">Backgrounds</string>
    <string name="prefExteriorBack">Bright background</string>
    <string name="prefExteriorBackDark">Dark background</string>
    <string name="prefExteriorDarkByBatterySaverSummaryOn">If Battery Saver is implemented, apply dark theme when it is on</string>
    <string name="prefExteriorDarkByBatterySaverSummaryOff">If Battery Saver is implemented, do not apply dark theme when it is on, except for system override</string>
    <string name="prefExteriorDarkPlanScheduleStart">Start time</string>
    <string name="prefExteriorDarkPlanScheduleEnd">End time</string>
    <string name="prefSettingsTrim2Round">Trim non-adaptive icons to round when appropriate</string>
    <string name="textManual">Manual</string>
    <string name="instantManual">Long-press on app icon in launcher to show App Shortcuts.\nPull down the notification shade, the settings toggles above the notification area are the Quick Settings Tiles you are looking for.</string>
    <string name="instantTileScannerMmManual">Click the tile to capture screen and open WeChat scanner to manually select the screenshot to scan.</string>
    <string name="avAdapterActionsDetails">Details</string>
    <string name="avAdapterActionsIcon">Share icon</string>
    <string name="avAdapterActionsApk">Share apk</string>
    <string name="fileActionsOpen">Open</string>
    <string name="fileActionsShare">Share</string>
    <string name="fileActionsSave">Save</string>
    <string name="unitsManager">Unit Manager</string>
    <string name="advice_source_code">Source code</string>
    <string name="advice_source_sub">Redirect to Github</string>
</resources>