<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Clifford Liu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/moreContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/moreSettings"
                android:layout_marginEnd="10dp"
                style="@style/MainCardLand">

                <TextView
                    style="@style/MainText"
                    android:drawableStart="@drawable/ic_settings_24"
                    android:text="@string/Main_ToolBar_title_Settings" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/moreUnitsManager"
                android:layout_marginStart="10dp"
                style="@style/MainCardLand">

                <TextView
                    style="@style/MainText"
                    android:drawableStart="@drawable/ic_extension_24"
                    android:text="@string/unitsManager" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/moreInstant"
                android:layout_marginEnd="10dp"
                style="@style/MainCardLand">

                <TextView
                    style="@style/MainText"
                    android:drawableStart="@drawable/ic_flash_24"
                    android:text="@string/Main_TextView_Launcher" />
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_marginStart="10dp"
                style="@style/MainCardLand"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
